--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -25,3 +25,13 @@ operation::nomemientas.juego.crear[snippets='request-fields,http-request']
 - Use the topic *_nomemientas.juego.crear/[aggregateRootId]_* para obtener el evento de dominio del backend
 - Use el *_juego/[aggregateRootId]/nomemientas.juego.crear_* para obtener el eventos desde el frontend
 include::{snippets}/nomemientas.juego.crear/response-body.adoc[]
+
+=== ININIALIZAR JUEGO
+
+operation::nomemientas.juego.inicializar[snippets='request-fields,http-request']
+
+=== Domain Event
+
+- Use the topic *_nomemientas.juego.inicializar/[aggregateRootId]_* para obtener el evento de dominio del backend
+- Use el *_juego/[aggregateRootId]/nomemientas.juego.inicializar_* para obtener el eventos desde el frontend
+include::{snippets}/nomemientas.juego.inicializar/response-body.adoc[]
